hphp/test/zend/bad/ext/soap/tests/schema/schema069.php
<?php
include "test_schema.inc";
$schema = <<<EOF
	<complexType name="testType">
		<attribute name="str" type="string"/>
		<attribute ref="tns:int"/>
	</complexType>
	<attribute name="int" type="int" default="5"/>
EOF;
test_schema($schema,'type="tns:testType"',(object)array("str"=>"str"));
echo "ok";
?>